[package]
name = "renamer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "renamer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
walkdir = "2.5"
regex = "1.11"
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
